--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="your_history_and_receipts">Your History and Receipts</string>
     <string name="we_ll_keep_you_up_to_date">We\'ll keep you up to date!</string>
     <string name="messages_textbox">Messages</string>
+    <string name="congrats_you_ve_won_a_free_drink">Congrats you\'ve won a free drink</string>
 </resources>
