--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,6 @@
     <string name="help">Help</string>
     <string name="points_collected_txt">points_collected</string>
     <string name="points_collected_text">points collected</string>
+    <string name="review_your_order">Review your Order</string>
+    <string name="order_text">Order</string>
 </resources>
