--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,25 @@
     <string name="order_text">Order</string>
     <string name="lbl_message">"Message: "</string>
     <string name="subject">"Subject: "</string>
+    <string name="order_now_txt">Order now!</string>
+    <string name="try_our_new_americano_coffee_today">Try our new Americano Coffee today!</string>
+    <string name="account_settings">Account Settings</string>
+    <string name="finnish_settings_up_your_account">Finnish settings up your account!</string>
+    <string name="points_collected_txt2">points collected!</string>
+    <string name="inbox3">Inbox</string>
+    <string name="history2">History</string>
+    <string name="menu">Menu</string>
+    <string name="choose_your_drink">Choose your drink</string>
+    <string name="go_to_cart">Go to Cart</string>
+    <string name="rewards2">Rewards</string>
+    <string name="settings">Settings</string>
+    <string name="change_your_app_settings">Change your app settings.</string>
+    <string name="security">Security</string>
+    <string name="app_settings">App Settings</string>
+    <string name="notifications">Notifications</string>
+    <string name="biometrics_unlock">Biometrics Unlock</string>
+    <string name="application_terms">Application Terms</string>
+    <string name="back">Back</string>
+    <string name="inbox_messages">Inbox Messages</string>
+    <string name="todo2">TODO</string>
 </resources>
